test loginservice:用户登录的业务接口